--- a/css/navBar.css
+++ b/css/navBar.css
@@ -1,19 +1,31 @@
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap');
 
 :root{
-    --primary--color:#DCDCDC
+  --cor-fundo: #deffe7;
+  --bottom-color:#5a8463
+  --primary--color:#03223f
+}
+:root{
+  --cor-secund: #7ba284
+}
+
+
+*{
+  font-family: 'Roboto', sans-serif;
+  padding: 0;
+  margin: 0;
+  
 }
 
 body,
 ul {
   margin: 0px;
   padding: 0px;
-  background-color: var(--primary--color);
+  background-color: #d4d3d33a;
 }
 
 a {
-  color: rgb(179, 150, 150);
   text-decoration: none;
-  font-family: sans-serif;
 }
 
 a:hover {
@@ -56,6 +68,8 @@ a:hover {
   display: none;
 }
 
+
+/* Menu navbar */
 @media (max-width: 600px) {
   #menu {
     display: block;
@@ -65,7 +79,7 @@ a:hover {
     right: 0;
     left: 0px;
     border-radius: 0 40px ;
-    background:#B0C4DE;
+    background: #e1e1e1;
     transition: 0.6s;
     z-index: 1000;
     height: 0px;
@@ -126,7 +140,7 @@ a:hover {
   }
 }
 
-
+/* Busca input */
 @media (max-width: 600px){
     .conteiner-menu{
         margin-top: 40px;
@@ -136,7 +150,8 @@ a:hover {
         
     }
     .conteiner-menu a{
-        color: black;
+        color:#1c232e;
+        font-size: 20px;
         list-style: none;
     }
     .conteiner-menu #icon{
@@ -150,7 +165,7 @@ a:hover {
 
     .searc-box {
         position: relative;
-        background-color: #B0C4DE;
+        background-color: orange;
         height: 25px;
         margin-left: 10px;
         width: 24rem;
@@ -162,7 +177,7 @@ a:hover {
     }
 
     .searc-btn{
-        background-color: #B0C4DE;
+        background-color: orange;
         float: right;
         font-size: 26px;
         width: 60px;
@@ -177,7 +192,7 @@ a:hover {
     .searc-text{
         border: none;
         border-radius: 40px;
-        background-color: #B0C4DE;
+        background-color: orange;
         outline: none;
         float: left;
         color: black;
@@ -191,7 +206,6 @@ a:hover {
 }
 
 @media (max-width: 600px){
-    
     .destaque{
         display: flex;
         justify-content: center;
@@ -215,7 +229,7 @@ a:hover {
         border-radius: 40px;
     }
 }
-
+ 
 /* Scrollbar */
 .todos-guias{
   width: 100%;
@@ -231,7 +245,7 @@ a:hover {
 
 .todos-guias div{
   margin: 5px;
-  background-color: #B0C4DE;
+  background-color: orange;
   min-width: 110px;
   width: 550px;
   height: 40px;
@@ -243,6 +257,7 @@ a:hover {
 
 .todos-guias div a{
   color: black;
+  list-style: none;
 }
 
 /* Scroolbar End */
