--- a/css/produtos.css
+++ b/css/produtos.css
@@ -1,15 +1,21 @@
+:root{
+    --primary-color: #e5e5e5
+}
+
 main{
     height: 2230px;
     font-family: 'Merriweather', serif;
     margin: 0;
+    margin-bottom: 10px;
     padding: 0;
-    background-color:beige;
+    background: var(--primary-color);
     border-radius: 20px;
     padding: 10px 0 0 0;
-    border-top: 1px solid rgb(135, 135, 92);
+    border-top: 1px solid var(--primary-color);
 }
 
 .novos-produtos h4{
+    font-size: 21px;
     margin: 20px 0 10px 10px;
     color: black;
 }
@@ -20,7 +26,6 @@ main{
     gap: 105px;
     margin: 0 1px;
     overflow-x: auto;
-    
     border-bottom: 1px dotted ;
 }
 
@@ -35,7 +40,7 @@ main{
     flex-direction: column;
     align-items: center;
     margin: 5px 5px 0 5px;
-    background-color: #7b7579;
+    background-color: white;
     border-radius: 5px;
 }
 
@@ -45,16 +50,20 @@ main{
     justify-content: center;
     margin-left: 15px;
     width: 100%
+    
 
 }
 .img-card a img{
-    width: 94%;
-    height: 80%;
+    width: 190px;
+    margin-right: 15px;
+    height: 240px;
     border-radius: 5px;
 }
 
 .nome-produto{
     margin-left: 14px;
+    min-width: 80%;
+    min-height: 90px;
 }
 
 .nome-produto h3{
@@ -62,6 +71,7 @@ main{
 }
 
 .detalhes-produto{
+    height: 120px;
     width: 90px;
     display: flex;
     align-items: center;
@@ -69,15 +79,28 @@ main{
 }
 
 .detalhes-produto a{
+
     display: flex;
     align-items: center;
     justify-content: center;
-    background-color: rgb(249, 144, 5);
+    background-color: orange;
     color: black;
-    font-size: 18px;
+    font-size: 17px;
     padding: 10px;
-    margin: 10px;
+    margin: 20px 10px 10px 10px;
     min-width: 100px;
     height: 20px;
     border-radius: 5px;
+}
+
+.valor-produto{
+    margin-top: 15px;
+}
+
+#entrar{
+    color: red;
+}
+
+#cadastrar{
+    color: green;
 }
